--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <p>remove and add p</p>
   <P>added form new3</P>
-
+  <p>new thing addded</p>
 
   <!-- Optional JavaScript; choose one of the two! -->
   <script src="elements/js/jquery-3.5.1.min.js"></script>
